[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/World.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/explosionCrunch_000.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/CustomFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/ScoreLabel.gd" type="Script" id=8]

[node name="World" type="Node"]
script = ExtResource( 3 )
EnemyScene = ExtResource( 4 )

[node name="Sprite" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 304 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Particles2D" parent="." instance=ExtResource( 5 )]
scale = Vector2( 0.5, 0.5 )

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="finished" from="ExplosionSound" to="." method="_on_ExplosionSound_finished"]
